--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/workspace/.metadata/
-/workspace/RemoteSystemsTempFiles/
-/workspace/testeds/
-/workspace/testandoDs/
+workspace/.metadata/
+workspace/RemoteSystemsTempFiles/
+workspace/testeds/
+workspace/testandoDs/
